kubernetes/deployment.yaml


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentview
  labels:
    app: rentview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentview
  template:
    metadata:
      labels:
        app: rentview
    spec:
      containers:
        - name: rentview
          image: cherry28j/rentview:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: cherry28j/payment:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rent
  labels:
    app: rent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rent
  template:
    metadata:
      labels:
        app: rent
    spec:
      containers:
        - name: rent
          image: cherry28j/rent:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: renthouse
  labels:
    app: renthouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: renthouse
  template:
    metadata:
      labels:
        app: renthouse
    spec:
      containers:
        - name: renthouse
          image: cherry28j/renthouse:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: rentview
  labels:
    app: rentview
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: rentview


---


apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: payment


---


apiVersion: v1
kind: Service
metadata:
  name: rent
  labels:
    app: rent
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: rent


---


apiVersion: v1
kind: Service
metadata:
  name: renthouse
  labels:
    app: renthouse
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: renthouse
