kubernetes/ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: team
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - host: ""
      http: 
        paths: 
          # - path: /rentviews
          - path: /dashboards
            pathType: Prefix
            backend: 
              serviceName: rentview
              servicePort: 8080
          # - path: /payments
          - path: /paymentHistories
            pathType: Prefix
            backend: 
              serviceName: payment
              servicePort: 8080
          - path: /rents
            pathType: Prefix
            backend: 
              serviceName: rent
              servicePort: 8080
          # - path: /renthouses
          - path: /managements
            pathType: Prefix
            backend: 
              serviceName: renthouse
              servicePort: 8080
